fix keyboard open content spacing

--- a/css/signup.css
+++ b/css/signup.css
@@ -257,3 +257,34 @@ input:-internal-autofill-selected {
   appearance: none;
   -webkit-box-shadow: 0 0 0 50px #141414dd inset !important;
 }
+/* @media (max-height: 900px) {
+  body {
+    flex-flow: column nowrap !important;
+  }
+  #org-title {
+    position: relative;
+    padding: 0;
+    margin-bottom: 20px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+  #org-name {
+    font-size: 20px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    min-width: fit-content;
+    margin-left: 10px;
+  }
+  #org-icon {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+  }
+} */
+@media (max-height: 900px) {
+  #org-title {
+    display: none;
+  }
+}
